# AmneziaSELFVPS

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  SETUP.md  THIRD_PARTY_LICENSES.md  _check.sh  _check2.sh  build_android.ps1  build_env.ps1  build_env.sh  build_installer.ps1  build_installer_log.txt  build_out.txt  installer.iss
.github/agents/: amnezia.agent.md
.github/workflows/: deploy.yml  tag-upload.yml
client/: CMakeLists.txt  amnezia_application.cpp  amnezia_application.h  main.cpp  resources.qrc  secure_qsettings.cpp  secure_qsettings.h  settings.cpp  settings.h  utilities.cpp  utilities.h  vpnconnection.cpp  vpnconnection.h
client/android/: AndroidManifest.xml  build.gradle.kts  gradle.properties
client/android/awg/: build.gradle.kts
client/android/cloak/: build.gradle.kts
client/android/openvpn/: build.gradle.kts
client/android/protocolApi/: build.gradle.kts
client/android/qt/: build.gradle.kts
client/android/utils/: build.gradle.kts
client/android/wireguard/: build.gradle.kts
client/android/xray/: build.gradle.kts
client/cmake/: 3rdparty.cmake  android.cmake  ios.cmake  macos.cmake  macos_ne.cmake  sources.cmake
client/configurators/: anytls_configurator.cpp  anytls_configurator.h  awg_configurator.cpp  hysteria2_configurator.cpp  hysteria2_configurator.h  openvpn_configurator.cpp  ssh_configurator.cpp  ssxray_configurator.cpp  ssxray_configurator.h  wireguard_configurator.cpp  xray_configurator.cpp
client/containers/: containers_defs.cpp  containers_defs.h
client/core/: blocklistUpdater.cpp  blocklistUpdater.h  defs.h  errorstrings.cpp  geoipUpdater.cpp  geoipUpdater.h  installedAppsImageProvider.cpp  installedAppsImageProvider.h  ipcclient.cpp  ipcclient.h  networkUtilities.cpp  networkUtilities.h  osSignalHandler.cpp  osSignalHandler.h  scripts_registry.cpp  scripts_registry.h  sshclient.cpp  sshclient.h
client/core/api/: apiDefs.h  apiUtils.cpp  apiUtils.h
client/core/controllers/: configSnapshotManager.cpp  configSnapshotManager.h  coreController.cpp  coreController.h  gatewayController.cpp  gatewayController.h  serverController.cpp  serverController.h  vpnConfigurationController.cpp
client/core/serialization/: inbound.cpp  serialization.h  transfer.h  vless.cpp
client/daemon/: daemon.cpp  interfaceconfig.cpp  interfaceconfig.h  wireguardutils.h
client/ios/app/: Info.plist.in
client/macos/app/: app.entitlements
client/macos/networkextension/: AmneziaVPNNetworkExtension.entitlements  CMakeLists.txt  Info.plist.in
client/mozilla/: localsocketcontroller.cpp  localsocketcontroller.h  networkwatcher.cpp  networkwatcher.h  networkwatcherimpl.h  pinghelper.cpp  pinghelper.h  pingsenderfactory.cpp  pingsenderfactory.h
client/mozilla/shared/: ipaddress.cpp  ipaddress.h
client/protocols/: anytlsprotocol.cpp  anytlsprotocol.h  hysteria2protocol.cpp  hysteria2protocol.h  ikev2_vpn_protocol_windows.cpp  openvpnprotocol.cpp  openvpnprotocol.h  protocols_defs.cpp  protocols_defs.h  vpnprotocol.cpp  vpnprotocol.h  wireguardprotocol.cpp  xrayprotocol.cpp  xrayprotocol.h
client/resources/: geoip_ru_cidrs.txt
client/server_scripts/: check_connection.sh  check_server.sh  check_server_is_busy.sh  cleanup_host.sh  hot_reconfigure_xray.sh  install_docker.sh  read_server_version.sh  remove_all_containers.sh  remove_container.sh  write_server_version.sh
client/server_scripts/anytls/: Dockerfile  configure_container.sh  run_container.sh  start.sh  template.json
client/server_scripts/awg/: Dockerfile  configure_container.sh  start.sh  template.conf
client/server_scripts/awg_legacy/: configure_container.sh  template.conf
client/server_scripts/hysteria2/: Dockerfile  configure_container.sh  run_container.sh  start.sh  template.yaml
client/server_scripts/openvpn/: run_container.sh
client/server_scripts/openvpn_cloak/: run_container.sh
client/server_scripts/openvpn_shadowsocks/: run_container.sh
client/server_scripts/socks5_proxy/: Dockerfile
client/server_scripts/ssxray/: Dockerfile  configure_container.sh  run_container.sh  start.sh  template.json
client/server_scripts/xray/: Dockerfile  configure_container.sh  run_container.sh  start.sh  template.json
client/translations/: amneziavpn_ar_EG.ts  amneziavpn_fa_IR.ts  amneziavpn_hi_IN.ts  amneziavpn_my_MM.ts  amneziavpn_ru_RU.ts  amneziavpn_uk_UA.ts  amneziavpn_ur_PK.ts  amneziavpn_zh_CN.ts
client/ui/: ne_notificationhandler.h  notificationhandler.cpp  notificationhandler.h  systemtray_notificationhandler.cpp
client/ui/controllers/: appSplitTunnelingController.cpp  appSplitTunnelingController.h  connectionController.cpp  connectionController.h  diagnosticsController.cpp  diagnosticsController.h  exportController.cpp  exportController.h  focusController.cpp  importController.cpp  importController.h  installController.cpp  installController.h  listViewFocusController.cpp  pageController.cpp  pageController.h  (+12 more)
common/logger/: logger.cpp  logger.h
deploy/: build_android.sh  build_ios.sh  build_macos_ne.sh  build_windows.bat  deploy_s3.sh
installer/AmneziaVPN.Installer/: AmneziaVPN.Installer.csproj  AmneziaVPN.Installer.csproj.lscache  App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  app.manifest
ipc/: ipc.h  ipc_interface.rep  ipc_process_interface.rep  ipcserver.cpp  ipcserver.h  ipcserverprocess.cpp  ipcserverprocess.h
launcher/: publish.ps1  run-studio.cmd  run-studio.sh
launcher/SelfvpsBuildStudio/: App.axaml  App.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  SelfvpsBuildStudio.csproj
service/: CMakeLists.txt
service/server/: CMakeLists.txt  killswitch.cpp  localserver.cpp  localserver.h  main.cpp  msvc_compat.c  msvc_stdio_stubs.c  router.cpp  router.h  router_linux.cpp  router_linux.h  router_mac.cpp  router_mac.h  router_win.cpp  router_win.h  systemservice.cpp  xray.cpp  xray.h
service/src/: qtservice_win.cpp
tools/: _diag_xray_remote.sh  apply_docker_dns.sh  apply_perf_tuning.sh  check_docker.sh  docker_daemon.json  fail2ban_jail.local  resolve_service_crash.ps1  vps_bootstrap.sh  vps_diag.sh
(+171 files in other folders)
